--- a/bin/homedir-excludes.conf
+++ b/bin/homedir-excludes.conf
@@ -15,60 +15,63 @@
 # (uncomment the files you don't need)        #
 ###############################################
 
-.android
-.AndroidStudio*/
-Android/Sdk
-.gradle
-.gvm
-.grails/
-.grails_history
-.kde/share/apps/nepomuk
-.local/share/notbit
-.local/libvirt
-.vagrant
-.vagrant.d
-.wine
-.twister
-/twister
-Applications/eclipse*
-/Downloads
-Scaricati
-*Popcorntime*
-/.aMule
-/Scribus
-/VirtualBox*
-/Nextcloud
-_build
+**/.android
+**/.AndroidStudio*/
+**/Android/Sdk
+**/.gradle
+**/.gvm
+**/.grails/
+**/.grails_history
+**/.kde/share/apps/nepomuk
+**/.local/share/notbit
+**/.local/libvirt
+**/.vagrant
+**/.vagrant.d
+**/.wine
+**/.twister
+**//twister
+**/Applications/eclipse*
+**//Downloads
+**/Scaricati/*
+**/*Popcorntime*
+**/.aMule
+**/Scribus
+**/VirtualBox*
+**/Nextcloud
+**/_build
 
 # Ruby gems
-.rvm
+**/.rvm
 
 # Add Game Folders here:
 
-/games
-.local/share/Steam
-.steam
-/Steam
-.minecraft
-.PlayOnLinux
+**/games
+**/.local/share/Steam
+**/.steam
+**/Steam
+**/.minecraft
+**/.PlayOnLinux
 
 # Spotify
-.config/spotify/Users
+**/.config/spotify/Users
 
 # those folders contain only temporary Videos I want to watch
-/Videos
-/Movies
+**/Videos
+**/Video
+**/Musica
+**/Modelli
+**/Movies
 
 # some history files
-.python_history
-.bash_history
-.zsh_history
+**/.python_history
+**/.bash_history
+**/.zsh_history
 
 # Python eggs
-.local/lib/python*
+**/.local/lib/python*
 
 # Unlocked Plasma Vaults
-/Vaults
+**/Vaults
 
 ################################################
 # These directories may definitely be excluded #
@@ -76,290 +79,290 @@ _build
 
 # Contains mounted file systems:
 
-.gvfs
-.local/share/gvfs-metadata
+**/.gvfs
+**/.local/share/gvfs-metadata
 # contains the actual encrypted home directory
-/.Private
+**/.Private
 
 # Session-specific:
-/.dbus
-.cache
-/.Trash
-.Trash-1*
-.local/share/Trash
-/Trash
+**/.dbus
+**/.cache
+**/.Trash
+**/.Trash-1*
+**/.local/share/Trash
+**/Trash
 
 # Cached info about audio CDs:
-.cddb
+**/.cddb
 
 # Cached packages lists:
-.aptitude
+**/.aptitude
 
 # Node Package Manager cache
-.npm
+**/.npm
 
 # Node Version Manager
-.nvm
+**/.nvm
 
 #Flash-specific:
 
 # Cache for flash, maybe others?
-.adobe
+**/.adobe
 # except for Flash persistence, there is no reason to keep this
-.macromedia
+**/.macromedia
 
 #Files:
 
 # Contains errors from current graphical session
-.xsession-errors
-.wayland-errors
+**/.xsession-errors
+**/.wayland-errors
 
 # Recently used files
-.local/share/RecentDocuments
-.recently-used
-.recently-used.xbel
-recently-used.xbel
-.thumbnails
-.thumb
-Thumbs.db
-.DS_Store
-.localised
-.CFUserTextEncoding
-.zcompdump*
-.wget-hsts
+**/.local/share/RecentDocuments
+**/.recently-used
+**/.recently-used.xbel
+**/recently-used.xbel
+**/.thumbnails
+**/.thumb
+**/Thumbs.db
+**/.DS_Store
+**/.localised
+**/.CFUserTextEncoding
+**/.zcompdump*
+**/.wget-hsts
 
 # Common Unix Printing System
-/.cups
+**/.cups
 
 # run-time configuration information for Subversion
-/.subversion
+**/.subversion
 
 # Python virtual environments
-/.virtualenvs
+**/.virtualenvs
 
 # Session-specific
-.Xauthority
-.ICEauthority
-.gksu.lock
-.pulse
-.pulse-cookie
-.esd_auth
+**/.Xauthority
+**/.ICEauthority
+**/.gksu.lock
+**/.pulse
+**/.pulse-cookie
+**/.esd_auth
 
 #KDE specific:
 
 # Recent documents on KDE
-.kde/share/apps/RecentDocuments
-.kde4/share/apps/RecentDocuments
+**/.kde/share/apps/RecentDocuments
+**/.kde4/share/apps/RecentDocuments
 # Contains a history of the Klipper clipboard (KDE)
-.kde/share/apps/klipper
-.kde4/share/apps/klipper
+**/.kde/share/apps/klipper
+**/.kde4/share/apps/klipper
 # You will loose saved scrolling positions of PDFs
-.kde/share/apps/okular/docdata
-.kde/share/apps/gwenview/recentfolders
-.kde4/share/apps/okular/docdata
-.kde4/share/apps/gwenview/recentfolders
+**/.kde/share/apps/okular/docdata
+**/.kde/share/apps/gwenview/recentfolders
+**/.kde4/share/apps/okular/docdata
+**/.kde4/share/apps/gwenview/recentfolders
 # Cached other users' profile pics
-.kde/share/apps/kmess/displaypics
-.kde4/share/apps/kmess/displaypics
+**/.kde/share/apps/kmess/displaypics
+**/.kde4/share/apps/kmess/displaypics
 # Cached emoticons of others
-.kde/share/apps/kmess/customemoticons
-.kde4/share/apps/kmess/customemoticons
+**/.kde/share/apps/kmess/customemoticons
+**/.kde4/share/apps/kmess/customemoticons
 
 #Tor Browser supposed to not be backupped ;)
-.local/share/torbrowser
+**/.local/share/torbrowser
 
 #Firefox-specific (see also Profile folder):
 
-.mozilla/firefox/*/Cache
+**/.mozilla/firefox/*/Cache
 # in case Fx crashes dumps will be stored in this
-.mozilla/firefox/*/minidumps
+**/.mozilla/firefox/*/minidumps
 # session-specific 
-.mozilla/firefox/*/.parentlock
+**/.mozilla/firefox/*/.parentlock
 # phishing database, recreated
-.mozilla/firefox/*/urlclassifier3.sqlite
+**/.mozilla/firefox/*/urlclassifier3.sqlite
 # blacklisted extensions
-.mozilla/firefox/*/blocklist.xml
+**/.mozilla/firefox/*/blocklist.xml
 # extension database, recreated on startup
-.mozilla/firefox/*/extensions.sqlite
-.mozilla/firefox/*/extensions.sqlite-journal
-.mozilla/firefox/*/extensions.rdf
-.mozilla/firefox/*/extensions.ini
-.mozilla/firefox/*/extensions.cache
+**/.mozilla/firefox/*/extensions.sqlite
+**/.mozilla/firefox/*/extensions.sqlite-journal
+**/.mozilla/firefox/*/extensions.rdf
+**/.mozilla/firefox/*/extensions.ini
+**/.mozilla/firefox/*/extensions.cache
 # cached UI data, recreated
-.mozilla/firefox/*/XUL.mfasl
-.mozilla/firefox/*/XPC.mfasl
-.mozilla/firefox/*/xpti.dat
-.mozilla/firefox/*/compreg.dat
+**/.mozilla/firefox/*/XUL.mfasl
+**/.mozilla/firefox/*/XPC.mfasl
+**/.mozilla/firefox/*/xpti.dat
+**/.mozilla/firefox/*/compreg.dat
 # cached plugin data, recreated
-.mozilla/firefox/*/pluginreg.dat
+**/.mozilla/firefox/*/pluginreg.dat
 
 #SeaMonkey-specific (see also Profile folder):
 
-.mozilla/seamonkey/*/Cache
+**/.mozilla/seamonkey/*/Cache
 # in case Fx crashes dumps will be stored in this
-.mozilla/seamonkey/*/minidumps
+**/.mozilla/seamonkey/*/minidumps
 # session-specific 
-.mozilla/seamonkey/*/.parentlock
+**/.mozilla/seamonkey/*/.parentlock
 # blacklisted extensions
-.mozilla/seamonkey/*/blocklist.xml
+**/.mozilla/seamonkey/*/blocklist.xml
 # extension database, recreated on startup
-.mozilla/seamonkey/*/extensions.sqlite
-.mozilla/seamonkey/*/extensions.rdf
-.mozilla/seamonkey/*/extensions.ini
+**/.mozilla/seamonkey/*/extensions.sqlite
+**/.mozilla/seamonkey/*/extensions.rdf
+**/.mozilla/seamonkey/*/extensions.ini
 # cached UI data, recreated
-.mozilla/seamonkey/*/xpti.dat
-.mozilla/seamonkey/*/compreg.dat
+**/.mozilla/seamonkey/*/xpti.dat
+**/.mozilla/seamonkey/*/compreg.dat
 # cached plugin data, recreated
-.mozilla/seamonkey/*/pluginreg.dat
+**/.mozilla/seamonkey/*/pluginreg.dat
 
 # Thunderbird Cache in your profile folder
-.thunderbird/*/Cache
+**/.thunderbird/*/Cache
 
 #Opera-specific (related question on Superuser.com: Is documentation available on files and directories in the Opera profile folder?):
 
-.opera/temporary_downloads
-.opera/cache
-.opera/thumbnails
-.opera/opcache
-.opera/icons
-.opera/application_cache
-.opera/widgets/*/cache
-.opera/lock
+**/.opera/temporary_downloads
+**/.opera/cache
+**/.opera/thumbnails
+**/.opera/opcache
+**/.opera/icons
+**/.opera/application_cache
+**/.opera/widgets/*/cache
+**/.opera/lock
 
 # Keychain dir (manage SSH and GPG keys, front-end to ssh-agent and ssh-add)
-/.keychain
+**//.keychain
 
 #Komodo Edit:
 
-.komodoedit/*/codeintel/db
-.komodoedit/*/host-*/*/codeintel
-.komodoedit/*/XRE/Cache
-.komodoedit/*/XRE/.activatestate/komodo edit/Crash Reports
-.komodoedit/*/XRE/.activatestate/komodo edit/*/Cache
-.komodoedit/*/XRE/.activatestate/komodo edit/*/minidump
-.komodoedit/*/XRE/.parentlock
-.komodoedit/*/XRE/extensions.rdf
-.komodoedit/*/XRE/extensions.ini
-.komodoedit/*/XRE/extensions.cache
-.komodoedit/*/XRE/XPC.mfasl
-.komodoedit/*/XRE/XUL.mfasl
-.komodoedit/*/XRE/xpti.dat
-.komodoedit/*/XRE/pluginreg.dat
-.komodoedit/*/XRE/compreg.dat
-.komodoedit/*/XRE/*.sqlite-journal
-.komodoedit/*/pystdout.log
-.komodoedit/*/pystderr.log
-.komodoedit/*/history.sqlite.bak
-.komodoedit/*/running.lock
-.komodoedit/*/mutex.lock
-.komodoedit/*/*.xmlc
-.komodoedit/*/startup-env.tmp
-.komodoedit/*/commandments.fifo
-.komodoedit/*/history.sqlite
+**/.komodoedit/*/codeintel/db
+**/.komodoedit/*/host-*/*/codeintel
+**/.komodoedit/*/XRE/Cache
+**/.komodoedit/*/XRE/.activatestate/komodo edit/Crash Reports
+**/.komodoedit/*/XRE/.activatestate/komodo edit/*/Cache
+**/.komodoedit/*/XRE/.activatestate/komodo edit/*/minidump
+**/.komodoedit/*/XRE/.parentlock
+**/.komodoedit/*/XRE/extensions.rdf
+**/.komodoedit/*/XRE/extensions.ini
+**/.komodoedit/*/XRE/extensions.cache
+**/.komodoedit/*/XRE/XPC.mfasl
+**/.komodoedit/*/XRE/XUL.mfasl
+**/.komodoedit/*/XRE/xpti.dat
+**/.komodoedit/*/XRE/pluginreg.dat
+**/.komodoedit/*/XRE/compreg.dat
+**/.komodoedit/*/XRE/*.sqlite-journal
+**/.komodoedit/*/pystdout.log
+**/.komodoedit/*/pystderr.log
+**/.komodoedit/*/history.sqlite.bak
+**/.komodoedit/*/running.lock
+**/.komodoedit/*/mutex.lock
+**/.komodoedit/*/*.xmlc
+**/.komodoedit/*/startup-env.tmp
+**/.komodoedit/*/commandments.fifo
+**/.komodoedit/*/history.sqlite
 
 #GnuPG:
 
-.gnupg/rnd
-.gnupg/random_seed
-.gnupg/.#*
-.gnupg/*.lock
-.gnupg/gpg-agent-info-*
+**/.gnupg/rnd
+**/.gnupg/random_seed
+**/.gnupg/.#*
+**/.gnupg/*.lock
+**/.gnupg/gpg-agent-info-*
 
 #Google Earth:
-.googleearth/Temp
-.googleearth/Cache
+**/.googleearth/Temp
+**/.googleearth/Cache
 
 #Google Chrome:
 
-.config/google-chrome/ShaderCache
-.config/google-chrome/Default/Local Storage
-.config/google-chrome/Default/Session Storage
-.config/google-chrome/Default/Application Cache
-.config/google-chrome/Default/History Index *
-.config/google-chrome/Default/Service Worker/CacheStorage
+**/.config/google-chrome/ShaderCache
+**/.config/google-chrome/Default/Local Storage
+**/.config/google-chrome/Default/Session Storage
+**/.config/google-chrome/Default/Application Cache
+**/.config/google-chrome/Default/History Index *
+**/.config/google-chrome/Default/Service Worker/CacheStorage
 
 #Chromium:
 
-.config/chromium/Default/Local Storage
-.config/chromium/Default/Session Storage
-.config/chromium/Default/Application Cache
-.config/chromium/Default/History Index *
-/snap/chromium/common/.cache
-/snap/chromium/*/.config/chromium/Default/Service Worker/CacheStorage
-/snap/chromium/*/.local/share/
+**/.config/chromium/Default/Local Storage
+**/.config/chromium/Default/Session Storage
+**/.config/chromium/Default/Application Cache
+**/.config/chromium/Default/History Index *
+**//snap/chromium/common/.cache
+**//snap/chromium/*/.config/chromium/Default/Service Worker/CacheStorage
+**//snap/chromium/*/.local/share/
 
 #Riot
-/snap/riot-web/
+**//snap/riot-web/
 
 #Brave
-.config/BraveSoftware/Brave-Browser/Default/Feature Engagement Tracker/
-.config/BraveSoftware/Brave-Browser/Default/Local Storage/
-.config/BraveSoftware/Brave-Browser/Default/Service Worker/CacheStorage/
-.config/BraveSoftware/Brave-Browser/Default/Session Storage/
-.config/BraveSoftware/Brave-Browser/Safe Browsing/
-.config/BraveSoftware/Brave-Browser/ShaderCache/
+**/.config/BraveSoftware/Brave-Browser/Default/Feature Engagement Tracker/
+**/.config/BraveSoftware/Brave-Browser/Default/Local Storage/
+**/.config/BraveSoftware/Brave-Browser/Default/Service Worker/CacheStorage/
+**/.config/BraveSoftware/Brave-Browser/Default/Session Storage/
+**/.config/BraveSoftware/Brave-Browser/Safe Browsing/
+**/.config/BraveSoftware/Brave-Browser/ShaderCache/
 
 #Local repositories:
-.gradle/caches
-/.m2/repository
+**/.gradle/caches
+**//.m2/repository
 
 #indexer
-.local/share/baloo
-.local/share/zeitgeist
-.local/share/akonadi
+**/.local/share/baloo
+**/.local/share/zeitgeist
+**/.local/share/akonadi
 
 #Other apps:
 
 # Pidgin
-.purple/icons
+**/.purple/icons
 # Cached applets
-.guayadeque/cache.db
-.java/deployment/cache
-.icedteaplugin
-.icedtea
-.gnome2/epiphany/favicon_cache
+**/.guayadeque/cache.db
+**/.java/deployment/cache
+**/.icedteaplugin
+**/.icedtea
+**/.gnome2/epiphany/favicon_cache
 
 # other temporary files
-nohup.out
+**/nohup.out
 
 # LibreOffice cache files
-.config/libreoffice/4/cache
+**/.config/libreoffice/4/cache
 
 # freshplayerplugin LSO
-.config/freshwrapper-data/Shockwave Flash/WritableRoot/#SharedObjects
+**/.config/freshwrapper-data/Shockwave Flash/WritableRoot/#SharedObjects
 
 # Snap caches
-.config/*/Cache
+**/.config/*/Cache
 
 # Atom
-.config/Atom/*Cache
-.config/Atom/IndexedDB
-.atom/compile-cache/
+**/.config/Atom/*Cache
+**/.config/Atom/IndexedDB
+**/.atom/compile-cache/
 
 # Vim
-.vim/bundle/*
-.viminfo
+**/.vim/bundle/*
+**/.viminfo
 
 # VS Code
-.vscode-oss/extensions/*
-.vscode/extensions/*
-.config/Code - OSS/blob_storage/
-.config/Code - OSS/GPUCache/
-.config/Code - OSS/logs/
-.config/Code/blob_storage/
-.config/Code/GPUCache/
-.config/Code/logs/
+**/.vscode-oss/extensions/*
+**/.vscode/extensions/*
+**/.config/Code - OSS/blob_storage/
+**/.config/Code - OSS/GPUCache/
+**/.config/Code - OSS/logs/
+**/.config/Code/blob_storage/
+**/.config/Code/GPUCache/
+**/.config/Code/logs/
 
 # VirtualBox
-.config/VirtualBox/VBoxSVC.log*
+**/.config/VirtualBox/VBoxSVC.log*
 
 # Rust artefacts
-.cargo
-.rustup
+**/.cargo
+**/.rustup
 
 # Erlang artefacts
-.kerl
+**/.kerl
 
 # ccache, remove cache but keep config
-.ccache/?
-.ccache/tmp
+**/.ccache/?
+**/.ccache/tmp
