change to 1M the removal

--- a/bin/homedir-excludes.conf
+++ b/bin/homedir-excludes.conf
@@ -275,20 +275,20 @@
 #Google Chrome:
 
 **/.config/google-chrome/ShaderCache
-**/.config/google-chrome/Default/Local Storage
-**/.config/google-chrome/Default/Session Storage
-**/.config/google-chrome/Default/Application Cache
-**/.config/google-chrome/Default/History Index *
-**/.config/google-chrome/Default/Service Worker/CacheStorage
+**/.config/google-chrome/*/Local Storage
+**/.config/google-chrome/*/Session Storage
+**/.config/google-chrome/*/Application Cache
+**/.config/google-chrome/*/History Index *
+**/.config/google-chrome/*/Service Worker/CacheStorage
 
 #Chromium:
 
-**/.config/chromium/Default/Local Storage
-**/.config/chromium/Default/Session Storage
-**/.config/chromium/Default/Application Cache
-**/.config/chromium/Default/History Index *
+**/.config/chromium/*/Local Storage
+**/.config/chromium/*/Session Storage
+**/.config/chromium/*/Application Cache
+**/.config/chromium/*/History Index *
 **//snap/chromium/common/.cache
-**//snap/chromium/*/.config/chromium/Default/Service Worker/CacheStorage
+**//snap/chromium/*/.config/chromium/*/Service Worker/CacheStorage
 **//snap/chromium/*/.local/share/
 
 #Riot
@@ -366,3 +366,5 @@
 # ccache, remove cache but keep config
 **/.ccache/?
 **/.ccache/tmp
+
+**/Git/**/.git
